<resources>
    <string name="app_name">CardiacRecorder</string>
    <string name="CardiacRecorder">strings</string>
    <string name="no_data_found">No data found</string>
    <string name="add_measurement">Add measurement</string>
    <string name="date_dd_mm_yyyy">Date(dd/MM/yyyy)</string>
    <string name="time_hh_mma">Time(hh:mma)</string>
    <string name="_60">60</string>
    <string name="_70">70</string>
    <string name="enter_any_message">Enter any message</string>
    <string name="save">Save</string>
    <string name="int_ph">%1$d</string>
    <string name="update">Update</string>
    <string name="systolic_pressure">Systolic Pressure</string>
    <string name="diastolic_pressure">Diastolic Pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date_n_time_ph">%1$s\n%2$s</string>
    <string name="sys_ph">%1$d\nmmHg</string>
    <string name="heart_rate_ph">%1$d\nBPM</string>
</resources>