...
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/tvDelete"
                app:layout_constraintEnd_toEndOf="@+id/tvDelete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvDelete"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
...
